src/test/deca/context/valid/created/class-two-fields.deca
//Description :
// Test de déclaration de classe avec deux arguements
//
// Resultats :
// 


class Premiere {
    int x = 2;
    boolean a;
}

{}
